# synae-code

./: README.md  run.sh
Benchmarks/T1 code/: AGENT_EVAL_README.md  CODE_OF_CONDUCT.md  HISTORY.md  README.md  download_dataset.py  evaluation.py  get_case_study_attempt2_tc_outputs.py  get_case_study_attempt3_tc_outputs.py  inference.py  llm_judge_on_orig_syn_results_e2e.py  merge_data.py  orig_syn_e2e.py  prepare_ori_data.py  pyproject.toml  run_llm_on_orig_syn_bench_e2e.py  syn_data2infer.py
Benchmarks/T1 code/data/: output_file_attraction_train_1.csv  syn_attractions_claude.csv  syn_attractions_claude_inferred.csv  t1_attraction_data.csv
Benchmarks/T1 code/docs/: index.md  installation.md  usage.md
Benchmarks/T1 code/evaluation/: compute_aggregate_metrics.py  generate_evaluation_metrics.py  process_model_output.py  run_evaluation.sh
Benchmarks/T1 code/hf_llm_configs/: gemma3_1b_it.yaml  judge.yaml  llama3_1_8b_it.yaml  qwen3_4b_it.yaml
Benchmarks/T1 code/src/t1/: cli.py  (+1 more)
SynDataGeneration/: .gitignore  README.md  classify_syn.py  collect_orig_syn_fps.py  config.py  create_syn.py  extract_time.py  pyproject.toml  run_classify.sh
SynDataGeneration/benchmarks/: acp_app_prog.py  bfcl_multiturn_base.py  t1_attraction.py
SynDataGeneration/configs_syn/: config.yaml
SynDataGeneration/configs_syn/orig_data/: acp_app_prog.yaml  bfcl_multiturn_base.yaml  t1_attraction.yaml  t1_attraction_full.yaml  t1_attraction_med.yaml
SynDataGeneration/configs_syn/syn_data/: blankfill.yaml  dropmin_acp_app_prog.yaml  dropmin_bfcl_multiturn_base.yaml  dropmin_t1_attraction.yaml  fewshot.yaml  fewshot_random.yaml  invalidate.yaml  oversample.yaml  oversample_without_repl.yaml
SynDataGeneration/experimental/t1_nemo/: orig_df.csv  orig_df_proc.csv  t1_gen_dropped_classes.py  t1_gen_zero_shot.py  utils.py
SynDataGeneration/experimental/tau2_syn/: create_tau2_syn_pe.py  process_tau2_syn_pe.py  tau2_mock_tasks.json
SynDataGeneration/orig_data/acp/: acp_app_bool.parquet  acp_app_prog.csv  acp_prog_bool.parquet  classification.csv  classify_acp.py  create_acp.py
SynDataGeneration/orig_data/bfcl/: classify_bfcl.py
SynDataGeneration/orig_data/t1/: classify_t1_attraction.py
(+130 files in other folders)
