[project]
name = "structbench-syndata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "einops>=0.8.1",
    "fschat",
    "hydra-core>=1.3.2",
    "pandas>=2.3.3",
    "private-evolution[text]",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "transformers-stream-generator>=0.0.5",
]

[tool.uv.sources]
private-evolution = { git = "https://github.com/microsoft/DPSDA.git" }
fschat = { git = "https://github.com/lm-sys/FastChat.git" }
