[project]
name = "t1"
version = "0.1.0"
description = "Inference code T1 Agents inference results on T1 dataset"
readme = "README.md"
authors = [
  {name = "Paresh Dashore", email = "pareshdashore19@gmail.com"}
]
maintainers = [
  {name = "Paresh Dashore", email = "pareshdashore19@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "transformers",
  "pydantic==2.10.6",
  "pandas",
  "jinja2",
  "google-genai",
  "sacrebleu",
  "torchmetrics",
  "openai",
  "tqdm",
  "huggingface_hub",
  "hf_transfer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/pareshdashore19/t1/issues"
changelog = "https://github.com/pareshdashore19/t1/blob/master/changelog.md"
homepage = "https://github.com/pareshdashore19/t1"

[project.scripts]
t1 = "t1.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
